--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ version=5.2.23.BUILD-SNAPSHOT
 org.gradle.jvmargs=-Xmx1536M
 org.gradle.caching=true
 org.gradle.parallel=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_351.jdk/Contents/Home
