--- a/spring-example/build.gradle
+++ b/spring-example/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.18'
     compile(project(":spring-context"))
+    compile(project(":spring-core"))
+    compile(project(":spring-beans"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
